feat: add unified component exports and new atomic components

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,12 +53,34 @@
     "nav_bookmarks": "Bookmarks",
     "nav_profile": "Profile",
     "nav_follow": "Follow",
+    "nav_platforms": "Platforms",
+    "nav_tags": "Tags",
+    "nav_about": "About",
+    "nav_submit": "Submit",
+    "expired": "Expired",
+    "days_left": " days left",
     "view_all": "View All",
     "no_campaigns": "No campaigns available at the moment"
   },
   "About": {
     "meta_title": "About AI Free Pool",
-    "meta_description": "Learn about AI Free Pool - your community-driven platform for discovering free AI credits and trials"
+    "meta_description": "Learn about AI Free Pool - your community-driven platform for discovering free AI credits and trials",
+    "title": "About AI Free Pool",
+    "intro": "AI Free Pool is a community-driven platform that helps you discover and track free AI credits, trials, and promotions from top AI platforms. Our mission is to make AI tools more accessible by aggregating the latest free credit campaigns in one place.",
+    "what_we_offer_title": "What We Offer",
+    "offer_1": "Curated list of AI free credit campaigns",
+    "offer_2": "Real-time updates on new promotions",
+    "offer_3": "Community contributions and verification",
+    "offer_4": "Bookmark and track your favorite campaigns",
+    "offer_5": "Multi-language support",
+    "how_it_works_title": "How It Works",
+    "step_1": "Browse campaigns from various AI platforms",
+    "step_2": "Filter by category, platform, or credit amount",
+    "step_3": "Bookmark campaigns you're interested in",
+    "step_4": "Submit new campaigns you discover",
+    "step_5": "Get notified about new opportunities",
+    "community_title": "Join Our Community",
+    "community_text": "Follow us on social media to stay updated with the latest AI free credit campaigns and never miss an opportunity to try new AI tools for free."
   },
   "SignIn": {
     "meta_title": "Sign in",
@@ -156,6 +178,7 @@
     "select_platform": "Select a platform",
     "create_new_platform": "➕ Create new platform",
     "platform_name_placeholder": "Enter platform name (e.g., OpenAI, Anthropic)",
+    "new_platform_review_notice": "New platform will be submitted for review along with the campaign",
     "field_title": "Campaign Title",
     "title_placeholder": "e.g., OpenAI Free $5 Credit for New Users",
     "field_description": "Description",
@@ -187,6 +210,17 @@
     "success_description": "Thank you for your contribution to the community"
   },
   "Admin": {
+    "dashboard": "Dashboard",
+    "pending": "Pending",
+    "verify": "Verify",
+    "campaigns": "Campaigns",
+    "platforms": "Platforms",
+    "featured": "Featured",
+    "import": "Import",
+    "tags": "Tags",
+    "settings": "Settings",
+    "back_to_site": "Back to Site",
+    "sign_out": "Sign Out",
     "featured_campaigns": "Featured Campaigns",
     "featured_campaigns_description": "Manage featured campaigns and view their performance statistics",
     "set_featured_campaign": "Set Featured Campaign",
@@ -205,7 +239,61 @@
     "search_and_select_campaign": "Search and select a campaign",
     "no_campaigns_found": "No campaigns found",
     "set_featured": "Set Featured",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "basic_information": "Basic Information",
+    "platform": "Platform",
+    "platform_name": "Platform Name",
+    "select_platform": "Select a platform",
+    "slug": "Slug",
+    "slug_hint": "Lowercase letters, numbers, and hyphens only",
+    "status": "Status",
+    "status_pending": "Pending",
+    "status_published": "Published",
+    "status_rejected": "Rejected",
+    "status_expired": "Expired",
+    "status_active": "Active",
+    "status_inactive": "Inactive",
+    "campaign_difficulty": "Difficulty Level",
+    "auto_calculate": "Auto Calculate",
+    "easy": "Easy",
+    "medium": "Medium",
+    "hard": "Hard",
+    "difficulty_hint": "Leave empty to auto-calculate based on condition tags",
+    "free_credit": "Free Credit",
+    "start_date": "Start Date",
+    "end_date": "End Date",
+    "official_link": "Official Link",
+    "usage_limits": "Usage Limits",
+    "condition_tags": "Condition Tags",
+    "condition_tags_desc": "Select tags that describe the conditions for participating in this campaign. Numbers in parentheses indicate difficulty weight.",
+    "tags_label": "Tags",
+    "tags_hint": "Select tags that apply to this campaign",
+    "no_tags_available": "No tags available",
+    "translations": "Translations",
+    "add_translation": "+ Add Translation",
+    "remove": "Remove",
+    "title": "Title",
+    "description": "Description",
+    "ai_generated": "AI Generated",
+    "featured_settings": "Featured Settings",
+    "mark_as_featured": "Mark as Featured",
+    "featured_until_date": "Featured Until",
+    "saving": "Saving...",
+    "update": "Update",
+    "create": "Create",
+    "links": "Links",
+    "platform_logo": "Logo URL",
+    "platform_website": "Website URL",
+    "social_media": "Social Media",
+    "twitter_url": "Twitter URL",
+    "github_url": "GitHub URL",
+    "discord_url": "Discord URL",
+    "loading": "Loading...",
+    "platform_management": "Platform Management",
+    "platform_management_desc": "Manage AI tool platforms and their information",
+    "new_platform": "+ New Platform",
+    "create_platform": "Create New Platform",
+    "edit_platform": "Edit Platform"
   },
   "Campaigns": {
     "pageTitle": "AI Free Pool - Browse Campaigns",
@@ -297,6 +385,7 @@
     "sort_expiring_soon": "Expiring Soon",
     "sort_highest_credit": "Highest Credit",
     "clearAll": "Clear All",
+    "apply": "Apply Filters",
     "searchPlaceholder": "Search campaigns, platforms...",
     "noPlatforms": "No platforms available",
     "noCategories": "No categories available",
@@ -348,11 +437,19 @@
     "confirmDelete": "Are you sure you want to delete \"{name}\"?",
     "daysLeft": "{days} days left",
     "expiredDaysAgo": "Expired {days} days ago",
-    "noExpiry": "No expiry"
+    "noExpiry": "No expiry",
+    "login_required": "Please sign in first",
+    "bookmark_added": "Added to bookmarks",
+    "bookmark_removed": "Removed from bookmarks",
+    "bookmark_error": "Operation failed, please try again"
   },
   "Menu": {
     "menu": "Menu",
+    "close": "Close",
     "language": "Language"
+  },
+  "A11y": {
+    "skip_to_content": "Skip to main content"
   },
   "Sort": {
     "mostPopular": "Most Popular",
