feat(campaigns): add participation tracking and refactor user engagement features
- Create user_participated_campaigns table with migration to track campaign participation
- Add ParticipationService for managing user campaign participation data
- Implement ParticipationButton and ParticipationProvider components for UI participation tracking
- Add new API routes for participation management (/api/participations/*, /api/participations/ids)
- Add batch emoji reactions API endpoint for efficient reaction updates
- Add bookmarks IDs API endpoint for fetching user bookmark identifiers
- Create BookmarkProvider component to manage bookmark state across application
- Create EmojiReactionProvider and ReactionProvider for centralized reaction state management
- Add ParticipationsTab component to user profile for viewing participated campaigns
- Create CampaignListWrapper component for improved campaign list rendering
- Update CampaignService, ReactionService, and BookmarkService with new methods
- Update Campaign schema to include participation-related fields
- Remove Sentry example routes and pages (sentry-example-api, sentry-example-page)
- Update Sentry configuration files for improved error tracking
- Update localization files (en.json, zh.json) with new participation-related strings
- Update admin pages and marketing pages to use new provider components
- Refactor component exports in index.ts to include new providers
- Update next.config.ts and instrumentation files for enhanced monitoring

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -116,6 +116,7 @@
     "total_bookmarks": "Total Bookmarks",
     "tab_overview": "Overview",
     "tab_bookmarks": "Bookmarks",
+    "tab_participations": "Participated",
     "tab_submitted": "Submitted",
     "tab_settings": "Settings",
     "overview_title": "Overview",
@@ -130,6 +131,12 @@
     "bookmarks_count": "{count} bookmarked campaigns",
     "no_bookmarks": "No bookmarks yet",
     "no_bookmarks_description": "Start bookmarking campaigns to save them for later.",
+    "participations_title": "My Participations",
+    "participations_count": "{count} participated campaigns",
+    "no_participations": "No participations yet",
+    "no_participations_description": "Mark campaigns you've participated in, and they won't be pushed to you anymore.",
+    "participated_on": "Participated on",
+    "remove_participation": "Remove participation mark",
     "expired": "Expired",
     "featured": "Featured",
     "expires": "Expires",
@@ -441,7 +448,13 @@
     "login_required": "Please sign in first",
     "bookmark_added": "Added to bookmarks",
     "bookmark_removed": "Removed from bookmarks",
-    "bookmark_error": "Operation failed, please try again"
+    "bookmark_error": "Operation failed, please try again",
+    "participation_tooltip": "Mark as participated, participated campaigns won't be pushed",
+    "participation_tooltip_done": "Already participated in this campaign",
+    "bookmark_tooltip": "Bookmark campaign for later viewing",
+    "bookmark_tooltip_done": "Already bookmarked this campaign",
+    "participation_added": "Marked as participated",
+    "participation_removed": "Participation mark removed"
   },
   "Menu": {
     "menu": "Menu",
