--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -116,6 +116,7 @@
     "total_bookmarks": "总收藏数",
     "tab_overview": "概览",
     "tab_bookmarks": "收藏",
+    "tab_participations": "已参与",
     "tab_submitted": "已提交",
     "tab_settings": "设置",
     "overview_title": "概览",
@@ -130,6 +131,12 @@
     "bookmarks_count": "{count} 个收藏的活动",
     "no_bookmarks": "暂无收藏",
     "no_bookmarks_description": "开始收藏活动以便稍后查看。",
+    "participations_title": "我的参与记录",
+    "participations_count": "{count} 个已参与的活动",
+    "no_participations": "暂无参与记录",
+    "no_participations_description": "标记您参与过的活动，这些活动将不再推送给您。",
+    "participated_on": "参与于",
+    "remove_participation": "取消参与标记",
     "expired": "已过期",
     "featured": "推荐",
     "expires": "过期时间",
@@ -493,7 +500,13 @@
     "login_required": "请先登录",
     "bookmark_added": "已添加到收藏",
     "bookmark_removed": "已取消收藏",
-    "bookmark_error": "操作失败，请重试"
+    "bookmark_error": "操作失败，请重试",
+    "participation_tooltip": "标记已参与，参与过的活动不再推送",
+    "participation_tooltip_done": "已参与此活动",
+    "bookmark_tooltip": "收藏活动，方便稍后查看",
+    "bookmark_tooltip_done": "已收藏此活动",
+    "participation_added": "已标记参与",
+    "participation_removed": "已取消参与标记"
   },
   "Menu": {
     "menu": "菜单",
